--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,2 @@
 /.vscode
-/1759995181.docx
-/1760098988.docx
-/check.png
-/coltivazione_idro.png
-/coltivazione_maturazione.png
-/coltivazione_terra.png
-/Comparazione.png
-/Durante la realizzazione dell’elabo.txt
-/elaborato_aggiornato_al_22-01.docx
-/grafico.png
-/import matplotlib.py
-/main.png
-/meteo.png
-/proprietà.png
-/quantità_da_produrre.png
-/raccolta.png
-/ricavo_guadagno.png
-/richiesta_ettaro.png
-/tabella.png
+/print_screen
